--- a/program.Rmd
+++ b/program.Rmd
@@ -27,6 +27,13 @@ The rapid evolution of innovation in cardiothoracic, blood, and sleep diseases, 
 
 \
 
+<center>
+
+![](images/research_program.png){width=85%}
+</center>
+
+\
+
 ## Training Grants
 
 The Department of Surgery promotes an enrichment program for residents to pursue research. Such a program varies in length, from a few months (supported by internal and extramural resources provided by the Division of Surgical Science) to multiple years (via the co-PI’s NIH-NHLBI T32 training grant and other federal training grants). 
@@ -37,22 +44,16 @@ Residents are introduced to the Research Opportunities by the Residency program 
 
 ## Application Process
 
-<u>August - September</u>: Applicants are invited to contact the PI via email and submit a full CV, a 1-page Research Statement, and the names of two references\
+<u>**August - September**</u>: Applicants are invited to contact the PI via email and submit a full CV, a 1-page Research Statement, and the names of two references\
 
-<u>October - November</u>: Interviews with Dr. Ferrari and the Leadership of the Dept of Surgery. Identification of possible clinical co-mentor(s) and research project(s).\
+<u>**October - November**</u>: Interviews with Dr. Ferrari and the Leadership of the Dept of Surgery. Identification of possible clinical co-mentor(s) and research project(s).\
 
-<u>February - March</u>: Selection of trainees and visit to Columbia. Meeting with PI, co-investigators, clinical co-mentor(s), and visit to the Lab\
+<u>**February - March**</u>: Selection of trainees and visit to Columbia. Meeting with PI, co-investigators, clinical co-mentor(s), and visit to the Lab\
 
-<u>Mid-June</u>: Applicants are invited to attend the annual DOS Research Symposium. Each year, in June, each Resident-Investigator will attend a retreat with senior faculty members on this program sponsored by the Department of Surgery at the Roy and Diana Vagelos Education Center. A keynote lecture from an internationally recognized speaker will open the Symposium. 
+<u>**Mid-June**</u>: Applicants are invited to attend the annual DOS Research Symposium. Each year, in June, each Resident-Investigator will attend a retreat with senior faculty members on this program sponsored by the Department of Surgery at the Roy and Diana Vagelos Education Center. A keynote lecture from an internationally recognized speaker will open the Symposium. 
 A specific section will be dedicated to the Resident-Investigators who will present their research. The retreat is also a powerful networking opportunity for resident-investigator to learn and interact with senior academic physicians. The Research and Advanced Education Committee will provide feedback to the Resident-Investigators./
 
-<u>July 1st</u>: PGY lab year(s) begins\
-
-\
-
-## Andrew Sabin Research Fellowship
-
-Coming soon
+<u>**July 1st**</u>: PGY lab year(s) begins\
 
 \
 
