updated prior residents

--- a/about.Rmd
+++ b/about.Rmd
@@ -226,12 +226,23 @@ Life's not ruff when I am around. Woof
 
 ---
 
-### Alumni
+### Alumni\
 
-Residents
+\
 
-Postdocs
+#### Alex P Kossar MD	\
 
+General Surgery Resident	(2018-2020)\
+
+\
+
+#### Alex D’Angelo MD	\
+CT Surgery Resident		(2019-2020)\
+
+\
+
+#### Matteo Marro MD	\
+General Surgery Resident	(2019-2020) \
 
 \
 
