--- a/biobank.Rmd
+++ b/biobank.Rmd
@@ -11,6 +11,10 @@ editor_options:
   chunk_output_type: console
 ---
 
+\
+
+<body>
+
 # Introduction
 \
 
@@ -22,6 +26,21 @@ Established in 2017 it included specimens collected from patients undergoing car
 
 Our Biobank strongly collaborate with the [Columbia University Biobank and The Irving Institute for Clinical and Translational Research](https://www.irvinginstitute.columbia.edu).
 
-#	Inquiry Form
+\
 
-Coming soon.
+---
+
+#	Inquiries
+
+\
+
+Please contact Dr. Ferrari and/or our Biobank Clinical Research Coordinator Vivian Moreno for more information regarding requesting available specimens for your research.  
+
+
+
+<i class="fa fa-telegram"></i> [Email Dr. Ferrari](mailto:<gf2375@cumc.columbia.edu>)
+
+<i class="fa fa-telegram"></i> [Email Vivian Moreno](mailto:<vmm2142@cumc.columbia.edu>)
+
+
+
