--- a/index.Rmd
+++ b/index.Rmd
@@ -51,15 +51,18 @@ We are located at the Columbia University Irving Medical Center in New York City
 \
 
 <div id="demobox">
+
 October 2021\
 Launched Ferrari Lab website.
+
 </div>
 
 \
 
 <div id="demobox">
+
 October 2021\
-Alexey Abramov's abstract titled "Extracorporeal Membrane Oxygenation (ECMO) Support in Patients with Covid-19: A Historical Control Propensity Score Matched Study" was accepted for an oral presentation at the annual meeting for the Society of Thoracic Surgeons (STS) in Miami, FL.  
+Alexey Abramov's abstract "Extracorporeal Membrane Oxygenation (ECMO) Support in Patients with Covid-19: A Historical Control Propensity Score Matched Study" was accepted for an oral presentation at the annual meeting for the Society of Thoracic Surgeons (STS) in Miami, FL.  
 </div>
 
 
