--- a/about.Rmd
+++ b/about.Rmd
@@ -204,7 +204,7 @@ I am Evan Woodard and I am a current 2nd year medical student at [Morehouse Scho
 
 ---
 
-### Biomedical Engineering Students		
+### Biomedical Engineering Students	\
 
 ![](images/mas.jpg){width=25%}
 
@@ -356,5 +356,8 @@ Theoretical and applied advanced imaging, especially magnetic resonance imaging 
 [Lab Website](https://www.med.upenn.edu/corlab/)
 
 \
+
+<p style="text-align:right;font-size:12px;">*Website built by A Abramov, Oct 2021*</p>
+
 
 
