--- a/about.Rmd
+++ b/about.Rmd
@@ -15,6 +15,8 @@ editor_options:
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <head>
 
+<body>
+
 \
 
 # Principal Investigator 
@@ -114,6 +116,8 @@ Currently, he is a NIH T32 post-doctoral research fellow in Dr. Ferrari's lab st
 In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.
 
 <i class="fa fa-telegram"></i> [Email](mailto:<aa3832@cumc.columbia.edu>)
+
+<a href="https://twitter.com/intent/tweet?button_hashtag=aabramov_md&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-size="large" data-related="ferrag02,lab_ferrari" data-show-count="false">Tweet #aabramov_md</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 \
  
