--- a/about.Rmd
+++ b/about.Rmd
@@ -373,6 +373,6 @@ Theoretical and applied advanced imaging, especially magnetic resonance imaging 
 <p style="text-align:right;font-size:12px;">*Website built by A Abramov, Oct 2021*</p>
 
 
-
+</body>
 
 
