--- a/about.Rmd
+++ b/about.Rmd
@@ -110,14 +110,11 @@ His research goal is to better understand the mechanisms of cardiovascular impla
 
 #### *Alexey Abramov, MD*
 
-Alexey is a General Surgery resident in the [New York Presbyterian-Columbia](https://columbiasurgery.org/general-surgery-residency) program with an interest in cardiothoracic surgery fellowship and biomedical engineering.  He graduated from [Emory University](http://college.emory.edu/main/index.html) and received his medical degree from [New York Medical College](https://www.nymc.edu/school-of-medicine-som/).\
-
-Currently, he is a NIH T32 post-doctoral research fellow in Dr. Ferrari's lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master's degree in the [Department of Biostatistics in the Mailmans School of Public Health](https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods) track. \
-In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.
+Alexey is a General Surgery resident in the [New York Presbyterian-Columbia](https://columbiasurgery.org/general-surgery-residency) program with an interest in cardiothoracic surgery fellowship and biomedical engineering.  He graduated from [Emory University](http://college.emory.edu/main/index.html) and received his medical degree from [New York Medical College](https://www.nymc.edu/school-of-medicine-som/). Currently, he is a NIH T32 post-doctoral research fellow in Dr. Ferrari's lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master's degree in the [Biostatistics in the Mailmans School of Public Health](https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods) track. In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.
 
 <i class="fa fa-telegram"></i> [Email](mailto:<aa3832@cumc.columbia.edu>)
 
-<a href="https://twitter.com/intent/tweet?button_hashtag=aabramov_md&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-size="large" data-related="ferrag02,lab_ferrari" data-show-count="false">Tweet #aabramov_md</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<i class="fa fa-twitter"></i> [Twitter](https://twitter.com/aabramov_MD)
 
 \
  
