updated esti twitter

--- a/about.Rmd
+++ b/about.Rmd
@@ -66,6 +66,8 @@ Currently, I am leading projects that explore myocardium-cardiac valve communica
 
 <i class="fa fa-book"></i> [Google Scholar](https://scholar.google.com/citations?hl=en&user=02qHMNkAAAAJ)\
 
+<i class="fa fa-twitter"></i> [Twitter](https://twitter.com/EstiCastillero)\
+
 \
 
 #### *Chiara Camillo, PhD*
