--- a/about.Rmd
+++ b/about.Rmd
@@ -76,9 +76,7 @@ Currently, I am leading projects that explore myocardium-cardiac valve communica
 
 Dr. Camillo is a cellular biologist studying the molecular mechanisms that regulate endothelium and vascular morphogenesis. Broadly, her research focuses on translational and clinical approaches to studying cardiovascular diseases using both in vitro and in vivo models. Dr. Camillo is leading projects on thoracic aortic aneurysm development, focused on determining the impact of glycation products on cellular phenotype, extracellular matrix remodeling and aortic wall instability. 
 
-“Sciences provide an understanding of a universal experience, Arts are a universal understanding of a personal experience... they are both a part of us and a manifestation of the same thing... the arts and sciences are avatars of human creativity” -- Mae Jemison
-
-\
+“Sciences provide an understanding of a universal experience, Arts are a universal understanding of a personal experience... they are both a part of us and a manifestation of the same thing... the arts and sciences are avatars of human creativity” -- Mae Jemison\
 
 <i class="fa fa-telegram"></i> [Email](mailto:<cc4418@cumc.columbia.edu>)\
 
