updated jessica links

--- a/about.Rmd
+++ b/about.Rmd
@@ -190,7 +190,7 @@ Vivian Moreno is the Clinical Research Coordinator for the Ferrari Lab. She comp
 
 #### *Jessica Tom*
 
-Jessica is a Research Technician in the Ferrari Lab. A native New Yorker, she completed her Bachelor’s of Science in Biology and Women’s Gender and Sexuality Studies at Stony Brook University. While at Stony Brook, she conducted research pertaining to Chronic Myelogenous Leukemia (CML) in the lab of Dr. Markus Seeliger. Her interest in cardiovascular diseases and prevention led her to the Ferrari Lab where she provides support to the biobank and various research projects. Her favorite pastimes include discovering new music, stand-up comedy specials, and baking. 
+Jessica is a Research Technician in the Ferrari Lab. A native New Yorker, she completed her Bachelor’s of Science in Biology and Women’s Gender and Sexuality Studies at [Stony Brook University](https://www.stonybrook.edu). While at Stony Brook, she conducted research pertaining to Chronic Myelogenous Leukemia (CML) in the lab of Dr. Markus Seeliger. Her interest in cardiovascular diseases and prevention led her to the Ferrari Lab where she provides support to the biobank and various research projects. Her favorite pastimes include discovering new music, stand-up comedy specials, and baking. 
 
 <i class="fa fa-telegram"></i> [Email](mailto:<jessica.tom@alumni.stonybrook.edu>)
 
